--- a/AutoMall/ViewControllers/PersonalCenter/AddEmployeeVC.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/AddEmployeeVC.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="17B48" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -39,7 +39,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bon-gX-IyM">
-                            <rect key="frame" x="0.0" y="74" width="375" height="165"/>
+                            <rect key="frame" x="0.0" y="10" width="375" height="165"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LPr-l4-sgK">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
@@ -228,7 +228,7 @@
                         <constraint firstAttribute="bottom" secondItem="Bon-gX-IyM" secondAttribute="bottom" id="Oef-h8-7we"/>
                         <constraint firstItem="Bon-gX-IyM" firstAttribute="leading" secondItem="GYz-QW-KlO" secondAttribute="leading" id="YE1-UV-iZP"/>
                         <constraint firstAttribute="trailing" secondItem="Bon-gX-IyM" secondAttribute="trailing" id="oBN-wq-kT4"/>
-                        <constraint firstItem="Bon-gX-IyM" firstAttribute="top" secondItem="GYz-QW-KlO" secondAttribute="top" constant="74" id="qK4-dO-dK5"/>
+                        <constraint firstItem="Bon-gX-IyM" firstAttribute="top" secondItem="GYz-QW-KlO" secondAttribute="top" constant="10" id="qK4-dO-dK5"/>
                     </constraints>
                 </scrollView>
             </subviews>
