--- a/AutoMall/ViewControllers/Upkeep/AutoCheckCarInfoVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/AutoCheckCarInfoVC.xib
@@ -292,12 +292,13 @@
                                         <constraint firstItem="nbj-IJ-bKi" firstAttribute="centerY" secondItem="5K8-8D-tP7" secondAttribute="centerY" id="zpn-Pw-Xg9"/>
                                     </constraints>
                                 </view>
-                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" tag="2" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Bp5-L4-4HP">
+                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" tag="2" contentMode="scaleToFill" text="请在此处录入备注" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Bp5-L4-4HP">
                                     <rect key="frame" x="0.0" y="632" width="375" height="150"/>
                                     <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="150" id="FoS-oy-AQP"/>
                                     </constraints>
+                                    <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     <connections>
