--- a/AutoMall/ViewControllers/PersonalCenter/MessageListCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/MessageListCell.xib
@@ -18,15 +18,6 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="89.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="消息名称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7So-y9-btK">
-                        <rect key="frame" x="16" y="10" width="61.5" height="22"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="22" id="RKd-bH-W3n"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="消息内容" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q6s-n5-8P2">
                         <rect key="frame" x="16" y="40" width="296" height="39.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
@@ -34,24 +25,33 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3p7-MA-oh9">
-                        <rect key="frame" x="82.5" y="2" width="14" height="14"/>
+                        <rect key="frame" x="16" y="16" width="10" height="10"/>
                         <color key="backgroundColor" red="0.91764705879999997" green="0.12941176469999999" blue="0.1764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="14" id="jbm-8k-A3Q"/>
-                            <constraint firstAttribute="width" constant="14" id="o4h-bi-v2l"/>
+                            <constraint firstAttribute="height" constant="10" id="jbm-8k-A3Q"/>
+                            <constraint firstAttribute="width" constant="10" id="o4h-bi-v2l"/>
                         </constraints>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="消息名称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7So-y9-btK">
+                        <rect key="frame" x="36" y="10" width="61.5" height="22"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="22" id="RKd-bH-W3n"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="Q6s-n5-8P2" secondAttribute="trailing" constant="8" id="82y-ku-zDd"/>
+                    <constraint firstItem="7So-y9-btK" firstAttribute="leading" secondItem="3p7-MA-oh9" secondAttribute="trailing" constant="10" id="Bto-xC-E3M"/>
+                    <constraint firstItem="3p7-MA-oh9" firstAttribute="centerY" secondItem="7So-y9-btK" secondAttribute="centerY" id="DIw-2S-sfP"/>
                     <constraint firstAttribute="bottom" secondItem="Q6s-n5-8P2" secondAttribute="bottom" constant="10" id="FR3-ej-L5x"/>
                     <constraint firstItem="Q6s-n5-8P2" firstAttribute="top" secondItem="7So-y9-btK" secondAttribute="bottom" constant="8" id="I3r-Vh-2WX"/>
-                    <constraint firstItem="3p7-MA-oh9" firstAttribute="leading" secondItem="7So-y9-btK" secondAttribute="trailing" constant="5" id="NIN-J5-gix"/>
                     <constraint firstItem="Q6s-n5-8P2" firstAttribute="top" secondItem="7So-y9-btK" secondAttribute="bottom" constant="8" id="Oof-r3-R2u"/>
-                    <constraint firstItem="7So-y9-btK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="agh-wm-gNn"/>
                     <constraint firstItem="Q6s-n5-8P2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="ajw-ow-GkF"/>
                     <constraint firstItem="7So-y9-btK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="d1P-xt-gGs"/>
-                    <constraint firstItem="3p7-MA-oh9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="w8R-G8-V4B"/>
+                    <constraint firstItem="3p7-MA-oh9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="frg-2v-kD7"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
